[metadata]
name = distributed_job_service
version = 0.0.1
description = Client for job management system used by all ll segments
author = Matt Peters
license = MIT
classifiers =
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Topic :: System :: Logging
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = distributed_job_service
package_dir =
    distributed_job_service = src/distributed_job_service
python_requires = >=3.10
install_requires =

[options.package_data]
distributed_job_service = ["py.typed"]

[options.extras_require]
dev =
    python-dotenv>=0.21.0
    pytest>=7.0.0
    pytest-cov>=4.0.0
